tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program angle_difference_between_two_bearings_1
  implicit none
  integer, dimension(8,2) :: testCases
  integer :: tc
  integer :: i0
    integer :: d
  testCases = reshape((/20.0,45.0,(0 - 45.0),45.0,(0 - 85.0),90.0,(0 - 95.0),90.0,(0 - 45.0),125.0,(0 - 45.0),145.0,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
  do i0 = 1, size(testCases)
    tc = testCases(i0)
    print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
  end do
  
  contains
  recursive real function angleDiff(b1,b2) result(res)
    real, intent(in) :: b1
    real, intent(in) :: b2
    d = (b2 - b1)
    if (((d < 0) - 180.0)) then
      res = (d + 360.0)
      return
    end if
    if ((d > 180.0)) then
      res = (d - 360.0)
      return
    end if
    res = d
    return
  end function angleDiff
end program angle_difference_between_two_bearings_1
